@@ -58,6 +58,10 @@ Version 1.4.22 - SVN
     putting the number of new messages in the browser title
   - Added clickjacking protection (thanks to Asbjorn Thorsen and Geir
     Hansen for bringing this to our attention). [CVE-2010-4554]
+  - Fixed XSS holes in generic options inputs, XSS hole in the SquirrelSpell
+    plugin, XSS hole in the Index Order page, and added anti-CSRF protection
+    to the empty trash feature and the Index Order page (thanks to Nicholas
+    Carlini for finding all these issues). [CVE-2010-4555]
 
 Version 1.4.21 - 23 Jul 2010
 ----------------------------
